--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+src/APPS/*/config.ts
+src/APPS/*/config.json
+src/APPS/*/settings.ts
+src/APPS/*/settings.json
